--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     background: url(img/bg.jpg);
     background-repeat: no-repeat; 
     background-size: cover;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 header{
     display: flex;
