--- a/style.css
+++ b/style.css
@@ -42,10 +42,10 @@ header .logo{
     cursor: pointer;
     filter: invert(1);
 }
-.navigation .perfil{
+/*.navigation .perfil{
     width: 40px;
     cursor: pointer;
-}
+}*/
 
 /*main*/
 
